# Kivarion

./: .gitignore  .prettierignore  .prettierrc.json  README.md  TestDatabase.kdbx  eslint.config.js  index.html  package.json  vite.config.js
src/: App.vue  crypto-init.js  dbHelper.js  kdbxView.js  main.js  router.js  store.js  utils.js
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: App_Icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BaseModal.vue  ConfirmModal.vue  DatabaseHeader.vue  DatabaseSettingsModal.vue  EntryDetail.vue  EntryList.vue  GroupNode.vue  GroupTree.vue  InputModal.vue  RestoreBackupModal.vue
src/components/entry-detail/: AttachmentPreviewModal.vue  EntryAttachments.vue  EntryCustomFields.vue  EntryEditFields.vue  EntryMetadata.vue  EntryViewFields.vue  PasswordGenerator.vue
src/components/entry-list/: EntryItem.vue  EntryListEmpty.vue  EntrySort.vue
src/composables/: useClipboard.js  useDatabaseActions.js  useDatabaseAuth.js  useEntryAttachments.js  useEntryForm.js  useEntryIcons.js  useGroupDragDrop.js  useOutsideClick.js  useResizable.js
src/pages/: DatabasePage.vue  HomePage.vue  SettingsPage.vue
tests/: kdbxView.test.js  useDatabaseActions.test.js  useDatabaseAuth.test.js  useEntryForm.test.js  useEntryIcons.test.js  utils.test.js
