[package]
name = "Kivarion"
version = "0.1.0"
description = "Password manager that works with KDBX (KeePass) files"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kivarion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

security-framework = "3.7.0"
security-framework-sys = "2.17.0"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError"] }
objc2-local-authentication = "0.3"
block2 = "0.6"

